board modify succ
