# back/src/modules/swagger.json
@@ -376,6 +376,74 @@
           "404": { "description": "Failed. Bad Request" }
         }
       }
+    },
+    "/board/{id}": {
+      "post": {
+        "tags": ["Board"],
+        "summary": "게시판 추가",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "context": "body",
+            "schema": { "$ref": "#/definitions/Board" }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "JWT access token",
+            "required": true,
+            "type": "string"
+          },
+          { "in": "path", "name": "id" }
+        ],
+        "responses": {
+          "201": { "description": "OK" },
+          "404": { "description": "Failed. Bad Request" }
+        }
+      },
+      "delete": {
+        "tags": ["Board"],
+        "summary": "게시판 추가",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "JWT access token",
+            "required": true,
+            "type": "string"
+          },
+          { "in": "path", "name": "id" }
+        ],
+        "responses": {
+          "201": { "description": "OK" },
+          "404": { "description": "Failed. Bad Request" }
+        }
+      },
+      "put": {
+        "tags": ["Board"],
+        "summary": "게시판 수정",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "context": "body",
+            "schema": { "$ref": "#/definitions/Board" }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "JWT access token",
+            "required": true,
+            "type": "string"
+          },
+          { "in": "path", "name": "id" }
+        ],
+        "responses": {
+          "201": { "description": "OK" },
+          "404": { "description": "Failed. Bad Request" }
+        }
+      }
     }
   },
   "definitions": {
